--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
             <label><input type="checkbox" id="option_a">[-a] Include directory entries whose names begin with a dot (.)</label>
             <label><input type="checkbox" id="option_l">[-l] List in long format.</label>
         </fieldset>
+        <label for="command_preview">command:</label>
+        <input type="text" id="command_preview" disabled>
         <label for="output">output:</label>
         <textarea id="output"></textarea>    
     </div>
